<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="64dp"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPregunta" />


    <EditText
        android:id="@+id/numBole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/tvCiudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCiudad" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <RadioGroup
        android:id="@+id/rgBoletos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbCDMX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbCDMX" />

        <RadioButton
            android:id="@+id/rbQRO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbQRO" />

        <RadioButton
            android:id="@+id/rbTequis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbTequis" />

    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/tvLunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvLunch" />


    <CheckBox
        android:id="@+id/chkLunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkLunch" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCalcular" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="22dp" />


</LinearLayout>